--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,18 @@ html {
     justify-content: center;
 }
 
+#app {
+    margin: auto;
+    width: 300px;
+}
+
 .game-field {
-    height: 50px;
-    width: 50px;
+    height: 150px;
+    width: 150px;
+}
+
+.game-field {
+    flex-direction: row;
 }
 
 #green-button {
