--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ html {
     width: 300px;
 }
 
-.game-field {
+.game-field { /* ToDo: add shadows */ /* FixMe: :active is not working if the field is in the sequence */
     height: 150px;
     width: 150px;
     border: none;
