--- a/css/style.css
+++ b/css/style.css
@@ -12,9 +12,41 @@ html {
     justify-content: center;
 }
 
+.column {
+    flex-direction: column;
+}
+
 #app {
     margin: auto;
     width: 300px;
+}
+
+p {
+    text-align: center;
+}
+
+#controls {
+    width: 300px;
+    justify-content: space-around;
+    margin-bottom: 10px;
+}
+
+.switch-box {
+    width: 120px;
+    margin-left: 2px;
+    margin-right: 2px;
+}
+
+#strict-box {
+    align-items: flex-start;
+}
+
+#information-box {
+    width: 52px;
+}
+
+#power-box {
+    align-items: flex-end;
 }
 
 .game-field { /* ToDo: add shadows */ /* FixMe: :active is not working if the field is in the sequence (has something to do with :before, :after?) */
@@ -55,8 +87,10 @@ html {
 .switch {
     position: relative;
     display: inline-block;
-    width: 60px;
+    width: 100px;
     height: 34px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
 }
 
 /* Hide default HTML checkbox */
@@ -96,7 +130,7 @@ input:focus + .slider {
 }
 
 input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
+    -webkit-transform: translateX(65px);
+    -ms-transform: translateX(65px);
+    transform: translateX(65px);
 }
