many CSS and HTML changes

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,11 @@ p {
     width: 52px;
 }
 
+#start {
+    border: none;
+    background-color: #ABFF4F;
+}
+
 #power-box {
     align-items: flex-end;
 }
