--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,10 @@ p {
     text-align: center;
 }
 
+button:focus {
+    outline: none;
+}
+
 #controls {
     width: 300px;
     justify-content: space-around;
@@ -41,8 +45,12 @@ p {
     align-items: flex-start;
 }
 
-#information-box {
+#information-box { /* ToDo: vertical alignment */
     width: 52px;
+}
+
+#round-counter {
+    display: none;
 }
 
 #start {
@@ -62,10 +70,6 @@ p {
     flex-direction: row;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
     transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-}
-
-.game-field:focus {
-    outline: none;
 }
 
 .game-field:hover {
