--- a/css/style.css
+++ b/css/style.css
@@ -16,13 +16,17 @@ html {
     flex-direction: column;
 }
 
-#app {
+#app { /* ToDo: align vertical */
     margin: auto;
     width: 300px;
 }
 
 p {
     text-align: center;
+}
+
+button {
+    font-family: 'Inconsolata', monospace;
 }
 
 button:focus {
@@ -36,7 +40,7 @@ button:focus {
 }
 
 .switch-box {
-    width: 120px;
+    width: 100px;
     margin-left: 2px;
     margin-right: 2px;
 }
@@ -46,7 +50,7 @@ button:focus {
 }
 
 #information-box { /* ToDo: vertical alignment */
-    width: 52px;
+    width: 92px;
 }
 
 #round-counter {
@@ -55,14 +59,22 @@ button:focus {
 
 #start {
     border: none;
-    background-color: #ABFF4F;
+    background: none;
+    font-size: 25px;
+    font-weight: 700;
+    text-shadow: 0 3px 3px rgba(0, 0, 0, 0.23);
+    transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+}
+
+#start:hover {
+    text-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 #power-box {
     align-items: flex-end;
 }
 
-.game-field { /* ToDo: add shadows */ /* FixMe: :active is not working if the field is in the sequence (has something to do with :before, :after?) */
+.game-field { /* FixMe: :active is not working if the field is in the sequence (has something to do with :before, :after?) */
     height: 146px;
     width: 146px;
     border: none;
@@ -113,7 +125,7 @@ button:focus {
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ccc;
+    background-color: lightgray;
     -webkit-transition: .4s;
     transition: .4s;
 }
@@ -131,7 +143,7 @@ button:focus {
 }
 
 input:checked + .slider {
-    background-color: #2196F3;
+    background-color: #F75C03;
 }
 
 input:focus + .slider {
