--- a/css/style.css
+++ b/css/style.css
@@ -89,7 +89,7 @@ button:focus {
 .game-field { /* FixMe: :active is not working if the field is in the sequence (has something to do with :before, :after?) */
     height: 146px;
     width: 146px;
-    border: none;
+    border: 4px solid black;
     margin: 2px;
     flex-direction: row;
     box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
@@ -102,18 +102,22 @@ button:focus {
 
 #green-button {
     background-color: #29BF12;
+    border-color: #29BF12;
 }
 
 #blue-button {
     background-color: #09B2CB;
+    border-color: #09B2CB;
 }
 
 #violet-button {
     background-color: #C4008C;
+    border-color: #C4008C;
 }
 
 #red-button {
     background-color: #F21B3F;
+    border-color: #F21B3F;
 }
 
 /* On/Off switch */ /* ToDo: needs to be styled */
